REMS-Salesforce/force-app/main/default/objects/Dispensation_Log__c/Dispensation_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks each instance of medication being dispensed by a pharmacy under a REMS program</description>
    <label>Dispensation Log</label>
    <nameField>
        <label>Dispensation Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispensation logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>