REMS-Salesforce/force-app/main/default/objects/Dispensation_Log__c/fields/Dispensation_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispensation_Date__c</fullName>
    <label>Dispensation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>