REMS-Salesforce/force-app/main/default/objects/Dispensation_Log__c/fields/Dispensation_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispensation_Status__c</fullName>
    <label>Dispensation Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Dispensed</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>