REMS-Salesforce/force-app/main/default/objects/Dispensation_Log__c/fields/Dispensed_By__c.field-meta.xml
<CustomField>
    <fullName>Dispensed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispensed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dispensation_logs</relationshipName>
    <type>Lookup</type>
</CustomField>