REMS-Salesforce/force-app/main/default/objects/Dispensation_Log__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Dispensation logs</relationshipLabel>
    <relationshipName>Dispensation_logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>