REMS-Salesforce/force-app/main/default/objects/Dispensation_Log__c/fields/Quantity_Dispensed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Dispensed__c</fullName>
    <label>Quantity Dispensed</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>